<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_image"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:fontFamily="@font/jsdongkang_regular"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:textFontWeight="500"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:weightSum="10">

            <Button
                android:id="@+id/btn_learning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@drawable/draw_02"
                android:fontFamily="@font/jsdongkang_regular"
                android:padding="20dp"
                android:text="@string/learning"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:weightSum="10">

            <Button
                android:id="@+id/btn_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@drawable/draw_01"
                android:fontFamily="@font/jsdongkang_regular"
                android:padding="20dp"
                android:text="@string/review"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:weightSum="10">

            <Button
                android:id="@+id/btn_song"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@drawable/draw_02"
                android:fontFamily="@font/jsdongkang_regular"
                android:padding="20dp"
                android:text="@string/fun_songs"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:weightSum="10">

            <Button
                android:id="@+id/btn_my_workbook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@drawable/draw_01"
                android:fontFamily="@font/jsdongkang_regular"
                android:padding="20dp"
                android:text="@string/my_word"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>